[package]
name = "carbonaria"
version = "1.0.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
bevy-inspector-egui = "0.13.0"
derive-error = "0.0.5"
heron = { version = "4.0.1", features = ["2d"] }
rand = { version = "0.8.5",  features = ["small_rng"] }

