[package]
name = "carbonaria"
version = "1.0.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Swap these for productio builds:
# bevy = { version = "0.9.1", features = ["dynamic"] }
bevy = { version = "0.9.1" }
# bevy-inspector-egui = "0.17.0"
derive-error = "0.0.5"
bevy_rapier2d = "0.20.0"
rand = { version = "0.8.5",  features = ["small_rng"] }
bevy-inspector-egui = "0.17.0"
lazy_static = "1.4.0"
